fix diagrame on mobile

--- a/assets/scss/_commons.scss
+++ b/assets/scss/_commons.scss
@@ -1701,12 +1701,16 @@ button {
     height: 42px;
     background: url('../images/modal-title-bg.png') no-repeat;
     background-size: 100%;
+    align-items: center;
+    @media screen and (max-width: 991px) {
+        height: 34px;
+    }
     .nav-link {
         position: relative;
-        padding: 8px 35px;
+        padding: 0 35px;
         color: #e3e6d5;
         @media screen and (max-width: 991px) {
-            padding: 6px 35px;
+            // padding: 0 35px;
         }
         &.active {
             color: $green;
@@ -1715,7 +1719,7 @@ button {
             content: '/';
             position: absolute;
             right: -5px;
-            top: 7px;
+            top: -1px;
             color: #4b5142;
         }
         &:last-child {
