--- a/assets/scss/_trend.scss
+++ b/assets/scss/_trend.scss
@@ -496,6 +496,7 @@
         > .level-col {
             &:first-child {
                 margin-bottom: 71px;
+                align-self: flex-end;
             }
         }
         > .level-col.two-branch {
